--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "runc"]
-	path = runc
-	url = https://github.com/opencontainers/runc.git
+	path = HaskellBinding/hs-libcontainer/src/godeps/src/github.com/opencontainers/runc
+	url = git@github.com:MatrixAI/runc.git
