Changes to stack project

--- a/hs-libcontainer2/src/godeps/src/github.com/matrixai/cgo-libcontainer/Makefile
+++ b/hs-libcontainer2/src/godeps/src/github.com/matrixai/cgo-libcontainer/Makefile
@@ -1,8 +1,10 @@
 .PHONY: all libcontainer clean
 .DEFAULT: libcontainer
 
+SOURCES := *.go
+
 libcontainer: $(SOURCES)
-	go build -buildmode=c-shared -linkshared -o libcontainer.so $(SOURCES)
+	go build -buildmode=c-shared -o libcontainer.so $(SOURCES)
 
 clean:
 	go clean
