--- a/practices/hs-libcontainer/hs-libcontainer.cabal
+++ b/practices/hs-libcontainer/hs-libcontainer.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: da7bc9ca0809a33267d6351faee80d2ecc1b8e99f82ab4db0cb6f7913653d19b
+-- hash: 69f39e0a344823d5e35e8e2d1328fb7714ed181733466d07798cf9960838c24b
 
 name:           hs-libcontainer
 version:        0.1.0.0
@@ -26,16 +26,15 @@ source-repository head
 
 library
   exposed-modules:
-      OCISpec
-      Test
+      Commands
   other-modules:
       Paths_hs_libcontainer
   hs-source-dirs:
       src
   include-dirs:
-      src/include
+      src/godeps/src/github.com/matrixai/go-runtime
   install-includes:
-      oci-spec.h
+      command.h
   build-depends:
       base >=4.7 && <5
   default-language: Haskell2010
@@ -48,7 +47,7 @@ executable hs-libcontainer-exe
       app
   ghc-options: -threaded -dynamic -rtsopts -with-rtsopts=-N
   extra-lib-dirs:
-      src/godeps/src/github.com/matrixai/cgo-libcontainer
+      src/godeps/src/github.com/matrixai/go-runtime
   extra-libraries:
       container
   build-depends:
