--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
-experiments/*
-.DS_Store
-bin
-pkg
+/.env
+/result
+/result-*
+/*.cabal
+
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
