--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
-name:                Emergence 
+name:                emergence 
 version:             0.1.0.0
 github:              "MatrixAI/Emergence"
-license:             Apache
+license:             Apache-2.0
 author:              "CMCDragonkai"
 maintainer:          "roger.qiu@matrix.ai"
 copyright:           "Copyright: (c) 2017 Matrix AI"
@@ -10,7 +10,7 @@ extra-source-files:
 - README.md
 - package.yaml
 
-description:         Please see the README on Github at <https://github.com/MatrixAI/Haskell-Demo#readme>
+description:         Please see the README on Github at <https://github.com/MatrixAI/Emergence#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -21,7 +21,7 @@ library:
     - Lib
 
 executables:
-  haskell-demo-exe:
+  emergence-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -29,10 +29,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-demo
+    - emergence
 
 tests:
-  haskell-demo-test:
+  emergence-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -40,4 +40,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-demo
+    - emergence
