--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ description:         Please see the README on Github at <https://github.com/Matr
 
 dependencies:
 - base >= 4.7 && < 5
+- typed-process >= 0.2.3 && < 0.3
 
 library:
   source-dirs: src
