--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,8 @@ description:         Please see the README on Github at <https://github.com/Matr
 dependencies:
 - base >= 4.7 && < 5
 - typed-process >= 0.2.3 && < 0.3
+- aeson
+- containers
 
 build-tools:
 - runc
