--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,7 @@ dependencies:
 - base >= 4.7 && < 5
 - typed-process >= 0.2.3 && < 0.3
 - aeson
+- aeson-casing >= 0.1.0.5 && < 0.2
 - containers
 
 build-tools:
