--- a/package.yaml
+++ b/package.yaml
@@ -15,9 +15,14 @@ description:         Please see the README on Github at <https://github.com/Matr
 dependencies:
 - base >= 4.7 && < 5
 - typed-process >= 0.2.3 && < 0.3
-- aeson
+- aeson >= 1.3.1.1 && < 1.4
 - aeson-casing >= 0.1.0.5 && < 0.2
+- cryptohash-sha256 >= 0.11.101 && < 0.12
 - containers
+- bytestring
+- filepath
+- directory
+- crypto-multihash >= 0.4.2.0 && < 0.5
 
 build-tools:
 - runc
